Fix extra spacing in NavBar and move up actions

--- a/client/src/Components/Feed/Feed.css
+++ b/client/src/Components/Feed/Feed.css
@@ -3,7 +3,5 @@
   grid-template-columns: 1fr 2fr;
 }
 
-.nav {
-  display: flex;
-  background-color: #c1f7f8 !important;
-}
+
+
