--- a/client/src/Components/SideBar/SideBar.css
+++ b/client/src/Components/SideBar/SideBar.css
@@ -16,7 +16,7 @@ aside {
 }
 
 .user-avatar {
-  padding: 5em 7em 2em 3.5em;
+  padding: 8em 2em 0em 2em;
   text-align: center;
 }
   
@@ -32,7 +32,7 @@ img {
   position: relative;
   margin: 0 10% 15% 15%;
   text-align: right;
-  top: 30%;
+  top: 27%;
   transform: translateY(-50%);
   font-weight: bold;
 }
@@ -44,7 +44,7 @@ img {
   
 .nav ul li {
   position: relative;
-  margin: 3.2em 0;
+  margin: 3.0em 0;
 }
     
 .nav ul li a {
